0.1.8
'Back' now goes back from selecting in the 'Functions' menu.
'Back' now switches tabs as well.

0.1.7
Redone code for external tools.
Fixed rare segfault in external tools dialog.
Added option to delete keyboard shortcut from external tools and main keyboard shortcuts.
Added option to add keyboard shortcut to external tools.
Fixed status bar lag when opening many large files.
Added 'Read Link...' to prefs to either open a link normally or to read the link first.
Added 'Open' to tab menu to quickly open files in current dirctory.
When moving multiple lines up/down selection is extended to whole lines.
Status bar now doesn't show '(null)' if no syntax highlighting or filepath.
Added more shortcuts.
Update status bar on tab switch.
Added 'Show/Hide Status Bar' to 'View' menu. 
Added status bar.
Added customising  dialog for keyboard shortcuts.
Added keyboard shortcuts.

0.1.6
Updated example tools that need root to use new features.
Now if no GUI for getting root priviliges specified ALL root actions are run in terminal.
Added 'Run Tool As Root' to tool options.
Fixed bug when user terminal command empty.
External Manpage editor program installed now checked at runtime instead of compile time.
Added user command for getting root privileges via a GUI in prefs.
Removed forced use of external app GtkSu for getting root privilege.
Added history drop down for 'Replace'.
Added history drop down for 'Find'.
Added 'Don't Warn On File Change' to prefs.
Added 'Don't Open Duplicate File' to Prefs.
Fixed minor prefs bug.
Set 'Root' window icon (red).
Redone .desktop file.
Set window icon properly.

0.1.5
Added 'Back' button to toolbar and 'Navigation' menu.
Added 'Copy Folder Path' to tab popup menu.
Globally installed tools are not usually editable and so don't show in the 'Edit External Tools' dialog.
Globally installed tools are now shown at the top of the 'Tools' menu.
Minor 'Paste' bugfix.
Added 'Clear tool output first' option to external tools prefs. 