@@ -1,4 +1,5 @@
 0.1.8
+Added highlight all to search.
 'Back' now goes back from selecting in the 'Functions' menu.
 'Back' now switches tabs as well.
 
